# hierarchical-blockchain

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEV_GUIDE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README.md  README_vi.md  demo.py  demo_key_backup.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: codeql.yml
adapters/database/: __init__.py  mongodb_adapter.py  mysql_adapter.py  postgres_adapter.py  sqlite_adapter.py
api/: blockchain_explorer.py  server.py
api/v1/: endpoints.py  schemas.py
api/v2/: endpoints.py
api/v3/: verify.py
cli/: __init__.py
config/: api_config.yaml  chain_config.yaml  error_profiles.yaml  risk_profiles.yaml  security_profiles.yaml  settings.py
consensus/: ordering_service.py
core/: block.py  blockchain.py  caching.py  domain_contract.py  parallel_engine.py  utils.py
core/consensus/: base_consensus.py  proof_of_authority.py
demo/: demo.py  demo_api.py  demo_key_backup.py  demo_zmq_consensus.py
domains/generic/chains/: base_chain.py  domain_chain.py
domains/generic/events/: base_event.py  domain_event.py
domains/generic/utils/: cross_chain_validator.py  entity_tracer.py
error_mitigation/: recovery_engine.py  rollback_manager.py  validator.py
hierachain/adapters/: __init__.py
hierachain/adapters/database/: __init__.py  sqlite_adapter.py
hierachain/adapters/storage/: __init__.py  file_storage.py  redis_storage.py
hierachain/api/: __init__.py  blockchain_explorer.py  server.py
hierachain/api/v1/: __init__.py  endpoints.py  schemas.py
hierachain/api/v2/: __init__.py  endpoints.py  schemas.py
hierachain/api/v3/: __init__.py  verify.py
hierachain/config/: __init__.py  risk_profiles.yaml  security_profiles.yaml  settings.py
hierachain/consensus/: __init__.py  ordering_service.py
hierachain/core/: __init__.py  block.py  blockchain.py  caching.py  data_validator.py  domain_contract.py  hybrid_engine.py  parallel_engine.py  performance.py  schemas.py  utils.py
hierachain/core/consensus/: __init__.py  base_consensus.py  proof_of_authority.py  proof_of_federation.py
hierachain/domains/: __init__.py
hierachain/domains/generic/: __init__.py
hierachain/error_mitigation/: __init__.py  data_validator.py  error_classifier.py  journal.py  recovery_engine.py  rollback_manager.py  validator.py
hierachain/hierarchical/: __init__.py  channel.py  hierarchy_manager.py  main_chain.py  multi_org.py  private_data.py  sub_chain.py  transaction_manager.py
hierachain/hierarchical/consensus/: __init__.py  bft_consensus.py
hierachain/hierarchical/ordering/: __init__.py
hierachain/integration/: __init__.py  arrow_client.py  enterprise.py  erp_framework.py  types.py
hierachain/monitoring/: __init__.py  alert_system.py  performance_metrics.py  performance_monitor.py
hierachain/network/: __init__.py  secure_connection.py  zmq_transport.py
hierachain/risk_management/: __init__.py  audit_logger.py  mitigation_strategies.py  risk_analyzer.py
hierachain/security/: certificate.py  identity.py  key_backup_manager.py  key_manager.py  key_provider.py  msp.py  policy_engine.py  resource_guard.py  secure_logging.py  security_utils.py  zk_prover.py  zk_verifier.py
hierachain/storage/: __init__.py  memory_storage.py  models.py  sql_backend.py  world_state.py
hierachain/units/: __init__.py  version.py
hierarchical/: channel.py  hierarchy_manager.py  main_chain.py  multi_org.py  private_data.py  sub_chain.py
hierarchical/ordering/: __init__.py  ordering_service.py
hierarchical_blockchain/: __init__.py
hierarchical_blockchain/api/: __init__.py  server.py
hierarchical_blockchain/config/: settings.py
hierarchical_blockchain/core/: utils.py
hierarchical_blockchain/error_mitigation/: recovery_engine.py
hierarchical_blockchain/hierarchical/consensus/: bft_consensus.py
hierarchical_blockchain/hierarchical/ordering/: __init__.py  ordering_service_simple.py
hierarchical_blockchain/units/: __init__.py  version.py
integration/: __init__.py  enterprise.py  erp_framework.py
monitoring/: performance_monitor.py
risk_management/: audit_logger.py  mitigation_strategies.py  risk_analyzer.py
scripts/: sarif_analysis.py  static_analysis.py
scripts/security/: api_key_edge_cases_probe.py  auth_bypass_probe.py  base_probe.py  business_flow_sequence.py  error_disclosure_verify.py  http_headers_probe.py  input_fuzzer.py  json_nested_bomb.py  log_level_test.py  oversized_payload_probe.py  path_traversal_probe.py  rate_limit_stress.py  slowloris_like_probe.py  ssrf_probe.py  stored_injection_probe.py
security/: __init__.py  identity.py  key_backup_manager.py  key_manager.py  msp.py  policy_engine.py
storage/: __init__.py  memory_storage.py  world_state.py
testing/: automated_tests.py  recovery_tests.py  static_analysis.py  validation_suites.py
tests/: benchmark_hashing.py  conftest.py
tests/integration/: test_advanced_system.py  test_arrow_integration.py  test_consensus_integration.py  test_cross_chain_2pc.py  test_cross_chain_validation.py  test_data_consistency.py  test_data_flow.py  test_database_adapters.py  test_hierarchical_system.py  test_reliability.py  test_repro_determinism.py  test_secure_connect.py  test_zk_complete_flow.py
tests/integration/api_v2/: test_api_v2.py
tests/scenarios/: test_recovery.py  test_risk_management.py  test_validation_suites.py
tests/unit/: test_arrow_support.py  test_bft_consensus.py  test_block.py  test_blockchain.py  test_caching.py  test_key_backup_manager.py  test_key_manager.py  test_msp.py  test_ordering_service.py  test_proof_of_authority.py  test_utils.py  test_version.py
tests/unit/api_v2/: test_channels.py  test_contracts.py  test_organizations.py  test_private_data.py
tests/unit/api_v3/: test_api_v3_init.py  test_verify_api_key.py
tests/unit/consensus/: test_bft_consensus.py  test_fuzzing.py  test_ordering_service.py  test_proof_of_authority.py  test_proof_of_federation.py
tests/unit/core/: test_arrow_compatibility.py  test_block.py  test_blockchain.py  test_caching.py  test_utils.py
(+20 files in other folders)
