[build-system]
requires = [
    "setuptools>=80.9.0",
    "setuptools_scm[toml]>=9.2.2",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "HieraChain"
description = "A HieraChain framework for enterprise applications"
readme = "README.md"
authors = [{ name = "Nguyễn Lê Văn Dũng", email = "dungnguyen2661@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.2",
    "python-multipart>=0.0.20",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "python-dateutil>=2.9.0.post0",
    "httpx>=0.28.1",
    "click>=8.3.1",
    "psutil>=7.1.3",
    "requests>=2.32.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["tox>=4.32.0", "black>=25.11.0", "flake8>=7.3.0", "mypy>=1.18.2"]

[project.scripts]
hrc = "hierachain.cli.__init__:hrc"

[project.urls]
"Homepage" = "https://github.com/VanDung-dev/HieraChain"
"Bug Reports" = "https://github.com/VanDung-dev/HieraChain/issues"
"Source" = "https://github.com/VanDung-dev/HieraChain"
"Documentation" = "https://github.com/VanDung-dev/HieraChain/blob/main/README.md"
"License" = "https://github.com/VanDung-dev/HieraChain/blob/main/LICENSE"
"Security Policy" = "https://github.com/VanDung-dev/HieraChain/blob/main/SECURITY.md"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests/unit", "tests/integration", "tests/scenarios"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
markers = [
    "critical: Critical risk validation tests",
    "high: High risk validation tests",
    "medium: Medium risk validation tests",
    "low: Low risk validation tests",
    "integration: Integration tests",
    "recovery: Recovery testing",
]
filterwarnings = ["ignore::pytest.PytestAssertRewriteWarning"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
