[build-system]
requires = [
    "setuptools>=80.9.0",
    "setuptools_scm[toml]>=9.2.2",
    "wheel>=0.45.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "HieraChain"
description = "A HieraChain framework for enterprise applications"
readme = "README.md"
authors = [{ name = "Nguyễn Lê Văn Dũng", email = "dungnguyen2661@gmail.com" }]
license = { text = "Apache-2.0 OR MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "fastapi>=0.125.0",
    "uvicorn>=0.38.0",
    "pyyaml>=6.0.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.17.0",
    "python-multipart>=0.0.21",
    "passlib>=1.7.0",
    "python-dateutil>=2.9.0.post0",
    "httpx>=0.28.0",
    "click>=8.3.0",
    "psutil>=7.1.0",
    "requests>=2.32.0",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
    "pynacl>=1.6.2",
    "starlette>=0.50.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tox>=4.32.0",
    "virtualenv-pyenv>=0.6.0",
    "black>=25.12.0",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "setuptools>=80.9.0",
    "setuptools_scm>=9.2.0",
    "wheel>=0.45.0",
    "coverage>=7.13.0",
    "build>=1.3.0",
    "twine>=6.2.0",
    "hypothesis>=6.148.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.0",
    "pygal>=3.1.0",
]

[project.scripts]
hrc = "hierachain.cli.__init__:hrc"

[project.urls]
"Homepage" = "https://github.com/VanDung-dev/HieraChain"
"Bug Reports" = "https://github.com/VanDung-dev/HieraChain/issues"
"Source" = "https://github.com/VanDung-dev/HieraChain"
"License-Apache" = "https://github.com/VanDung-dev/HieraChain/blob/main/LICENSE-APACHE"
"License-MIT" = "https://github.com/VanDung-dev/HieraChain/blob/main/LICENSE-MIT"
"Security Policy" = "https://github.com/VanDung-dev/HieraChain/blob/main/SECURITY.md"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests/unit", "tests/integration", "tests/scenarios"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
markers = [
    "critical: Critical risk validation tests",
    "high: High risk validation tests",
    "medium: Medium risk validation tests",
    "low: Low risk validation tests",
    "integration: Integration tests",
    "recovery: Recovery testing",
]
filterwarnings = ["ignore::pytest.PytestAssertRewriteWarning"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
